# clangTesting

./: .gitignore  CMakeLists.txt  README.md
doc/: JenkinsAPI.txt
docs/html/: index.html
jenkins/: Jenkinsfile  groovy.cfg
src/: CMakeLists.txt  clangtest1.cpp
src/ssl/crt/: cert.crt
